fix: vertically align nav arrow with p5 logo using flexbox

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -66,6 +66,7 @@
     .logo {
       height: 50px;
       display: flex;
+      align-items: center;
       gap: var(--spacing-xs);
       padding: 0;
       margin-bottom: 10px;
@@ -113,7 +114,6 @@
     display: none;
     @media (min-width: variables.$breakpoint-tablet) {
       display: block;
-      margin-top: 7.5px;
     }
   }
 
